--- a/package.json
+++ b/package.json
@@ -17,15 +17,28 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-breakpoints": "^1.3.10",
+    "gatsby-plugin-catch-links": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-layout": "^4.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-recaptcha": "^1.0.5",
+    "gatsby-plugin-root-import": "^2.0.9",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-datocms": "^5.1.2",
     "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-remark": "^6.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
+    "react-datocms": "^4.1.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8"
   }
 }
